--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: "Nunito", sans-serif !important;
 }
