--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -46,3 +46,15 @@ input[type="color"]:focus,
   background: #f4f4f4 !important;
   min-height: 480px;
 }
+
+.customLinks {
+  color: #1db954;
+  text-decoration: none;
+  transition: 0.1s ease !important;
+}
+
+.customLinks:hover {
+  color: #1ed760;
+  text-decoration: none;
+  transition: 0.1s ease !important;
+}
