get data from playlists and create playlist with top tracks across all of them

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -27,7 +27,7 @@ input[type="color"]:focus,
   font-size: 1.35rem !important;
 }
 
-.jumbotron {
+.homeJumbotron {
   background: #f4f4f4 !important;
   min-height: 480px;
 }
