--- a/client/src/components/TopTracks/TopTracks.css
+++ b/client/src/components/TopTracks/TopTracks.css
@@ -1,5 +1,3 @@
-.header {
-  background: #f4f4f4 !important;
-  margin-bottom: -250px !important;
-  min-height: 480px;
+.playlistCard {
+  width: 350px;
 }
