--- a/client/src/components/Artists/Artists.css
+++ b/client/src/components/Artists/Artists.css
@@ -10,7 +10,7 @@ ul .media {
   content: counter(rowNumber);
 }
 
-.card {
+.artistCards {
   box-shadow: 1px 0 5px 0 rgba(0, 0, 0, 0.15) !important;
   -webkit-transition: box-shadow 0.3s ease-in-out;
   -moz-transition: box-shadow 0.3s ease-in-out;
@@ -18,7 +18,7 @@ ul .media {
   transition: box-shadow 0.3s ease-in-out;
 }
 
-.card:hover {
+.artistCards:hover {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   -webkit-transition: box-shadow 0.3s ease-in-out;
   -moz-transition: box-shadow 0.3s ease-in-out;
